# game_engine

./: README.md
mvp1/: Car Architecture MVP1.drawio  Car Architecture MVP1.html
src/: CMakeLists.txt  a.out  main.cpp  test.cpp
src/Renderer/: Shader.cpp
src/includes/: Config.h  Exceptions.h  Renderer.h  Shader.h  Vertex.h  Window.h
src/includes/Ecs/: BaseComponents.h  BaseEcsStructures.h  BaseEntity.h  BaseSystem.h  Data.h  IBaseEntity.h  ISystem.h  RenderSystem.h
src/includes/Ecs/Entities/: CameraEntity.h  CarEntity.h
src/includes/Ecs/Systems/: KinematicSystem.h  RenderSystem.h
src/includes/Geometry/: BoundingBoxes.h  Vector.h  Vertex.h
src/includes/Message/: Buffer.h  Messages.h
src/includes/ecs/: BaseEcsStructures.h
src/res/Shaders/: default_vertex_shader.vs  fragment_shader.fs  vertex_shader.vs
src/src/: CMakeLists.txt  Config.cpp  Exceptions.cpp  main.cpp
src/src/Ecs/: BaseComponents.cpp  BaseEntity.cpp  CMakeLists.txt  Data.cpp
src/src/Ecs/BaseComponents/: BaseDataComponent.cpp  BaseKinematicComponent.cpp  BaseLogicComponent.cpp  BaseRenderComponent.cpp  BaseRenderComponents.cpp  BaseTransformComponent.cpp
src/src/Ecs/Entities/: CameraEntity.cpp  CarEntity.cpp
src/src/Ecs/Systems/: KinematicSystem.cpp  RenderSystem.cpp
src/src/Message/: Buffer.cpp  CMakeLists.txt  Messages.cpp
src/src/Renderer/: CMakeLists.txt  Config.cpp  Renderer.cpp  Shader.cpp  Window.cpp
src/src/includes/: Exceptions.h  Renderer.h  Shader.h  Window.h
